--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 sudo: required
-dist: trusty
 node_js:
-- 11
+- "node"
 before_install:
 - sudo add-apt-repository -y ppa:rwky/graphicsmagick
 - sudo add-apt-repository -y ppa:mc3man/trusty-media
